# rag-github-repo

./: .env-example  Dockerfile  README.md  entrypoint.sh  pyproject.toml
data/: data_chunks.json  final_data.json  source.txt
src/: embeddings.py  interface.py
src/agents/: contextual_agent.py  rag_agent.py
src/core/: database.py  settings.py
src/preprocessing/: chunk_splitter.py  context_generator.py
